<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/background"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/VerticalContainers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/TopSystemContainer"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/canselButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@color/background"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cancel_button_description"
                app:srcCompat="@drawable/cancel" />

            <TextView
                android:id="@+id/textMaxScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/textMaxScore" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:backgroundTint="@color/background"
                android:scaleType="fitCenter"
                android:contentDescription="@string/settings_button_description"
                app:srcCompat="@drawable/settings" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ScoreContainer"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enemyTextScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/enemyTextScore"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/separatorScore"
                android:layout_width="15sp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/separatorTextScore" />

            <TextView
                android:id="@+id/userTextScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="@string/userTextScore"
                android:textColor="@color/green"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/EnemyContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foregroundTint="@color/background"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/enemy"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/red_border"
                app:srcCompat="@drawable/question" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/UserContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="bottom">

            <ImageButton
                android:id="@+id/rockButton"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:backgroundTint="@color/background"
                android:contentDescription="@string/user_Text_Rock_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/rock" />

            <ImageButton
                android:id="@+id/scissorsButton"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:backgroundTint="@color/background"
                android:contentDescription="@string/user_Text_Scissors_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/scissors" />

            <ImageButton
                android:id="@+id/paperButton"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:backgroundTint="@color/background"
                android:contentDescription="@string/user_Text_Paper_description"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/paper" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>